What's new for PSPTris

Version 0.7 (xxth of xxx 2006)
--------------------------------
Fixes:
	- Replaced internal random number algorithm with the PSPs native functionality. Should give more randomness.
	- Fixed the rotation of the L shaped bricks.

Features:
	- xxx

Version 0.61 (22th of May 2006)
--------------------------------
Fixes:
	- Bugfix in highscore screen where the name wasn't shown.
	- Exit via home-button now works again.
	- Selecting pause on the OSK caused the text not to render.
	- Highscores were written in the parent dir in the plugin version.
	- Modified the displaylists, which reduces the memory consumption by 1.5 MB.

Features:
	- Implemented support to use PSPTris as a plugin to PSPRadio.
	- Exit option has been added to the menu.
	- Exit to menu from the pause screen.
	- Added support for user defined music. (see readme.txt)


Version 0.6 (07th of May 2006)
--------------------------------
Fixes:
	- The keyhandling are more responsive (quicker) in the game.
	- The blockhandling has been rewritten, so rotation etc. should work correct now.
	- Better handling when entering highscores (it automatically selects next position after having entered a character).
	- Updated the danzeff OSK so that it doesn't need the transperant images. This saves 1 MB of system memory. (the transperancy still works).
	- Mute the music while the game is paused.
	- Update the bricks so that there are more differences in the colors.

Features:
	- New gametype has been added (matching colors).
	- Game instructions added to the menu.
	- A line counter has been added to the classic game.
	- Exploding effect added when removing lines/balls.
	- Sounds effects has been added to the game.


Version 0.5 (29th of April 2006)
--------------------------------
Fixes:

Features:
	- Initial release (so everything is new :) )